--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -104,12 +104,13 @@
         </div>
         <h2>Namespaces</h2>
         <p>
-            To use any of the provided classes in the asset, make sure to use the correct namespace.
+            To reference any of the provided classes in the asset, make sure to use the correct namespace.
         </p>
         <ul>
             <b><li>using CharacterController2D;</li></b>
             <ul>
                 <li>Utilities</li>
+                <li>DashEffect</li>
             </ul>
         </ul>
         <ul>
@@ -128,7 +129,6 @@
                 <li>CharacterLedgeGrab</li>
                 <li>CharacterMovement</li>
                 <li>CharacterSlide</li>
-                <li>DashEffect</li>
             </ul>
         </ul>
         <ul>
@@ -157,6 +157,19 @@
                 <li>SimpleActionCooldownUI</li>
                 <li>BowAttackUI</li>
                 <li>HealthUI</li>
+            </ul>
+        </ul>
+        <ul>
+            <b><li>using CharacterController2D.EditorScripts;</li></b>
+            <ul>
+                <li>CharacterEnvironmentalQueryEditor</li>
+                <li>HumanoidControllerEditor</li>
+                <li>CharacterLedgeGrabEditor</li>
+                <li>CharacterCombatEditor</li>
+                <li>EntityHealthEditor</li>
+                <li>AttackSOEditor</li>
+                <li>CombatSystemProjectileEditor</li>
+                <li>AnimatorSpriteRebinder</li>
             </ul>
         </ul>
     </div>    
