--- a/2D Controller/HTML/locomotion-controller.html
+++ b/2D Controller/HTML/locomotion-controller.html
@@ -58,9 +58,9 @@
         <p>
             To implement horizontal movement for your character, simply call the  <a class="redirect-link" href="CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html">ChangeHorizontalVelocity</a>
             method of the <a class="redirect-link" href="CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> class and pass as the parameter the horizontal
-            input as a Vector2 variable.
+            input as a <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> variable.
             <br><br>
-            <b>Note:</b> When obtaining the horizontal input from the keyboard, it is preferable to call the <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxisRaw.html">GetAxisRaw</a>
+            <b style="color: red;">Important:</b> When obtaining the horizontal input from the keyboard, it is preferable to call the <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxisRaw.html">GetAxisRaw</a>
             method instead of <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxis.html">GetAxis</a>, as the latter can make the movement laggy. 
         </p>
         <br>
