--- a/2D Controller/HTML/CLASSES/MANUAL/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -141,7 +141,7 @@
         <br>
         <table>
             <tr>
-                <td class="label"><b>floorSlideJump</b></td>
+                <td class="label"><b>FloorSlideJump</b></td>
                 <td class="description">
                     Setting this value to '<b>true</b>' allows your character to jump while sliding.
                     Otherwise '<b>false</b>' if you want to prevent your character from jumping while sliding.
@@ -162,6 +162,10 @@
             <tr>
                 <td class="label"><b>LedgeJumpThreshold</b></td>
                 <td class="description">What percentage of the 'Ledge Enter' animation must be completed before the character can jump while in the 'LedgeGrab' state?</td>
+            </tr>
+            <tr>
+                <td class="label"><b>LedgeJumpStrength</b></td>
+                <td class="description">If only utilizing the ledge grab mechanic without the ledge climb mechanic, this value will determine your character's jump strength when they jump from the ledge. If both of the mechanics are utilized, ignore this value.</td>
             </tr>
             <tr>
                 <td class="label"><b>MaxLedgeGrabTime</b></td>
