--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
@@ -44,6 +44,14 @@
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/jump-strength.html">JumpStrength</a></td>
+                    <td class="description">Modifies the strength of the jump.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/wall-jump-strength.html">WallJumpStrength</a></td>
+                    <td class="description">Modifies the strength of the wall jump. Set the X value as the horizontal strength and the Y value as the vertical strength.</td>
+                </tr>
+                <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/top-speed.html">TopSpeed</a></td>
                     <td class="description">The character's set movement speed.</td>
                 </tr>
