--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -151,12 +151,8 @@
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
-                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/dash-cooldown.html">DashCooldown</a></td>
-                    <td class="description">The set cooldown of the dash mechaninc in seconds.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/ledge-grab-hold-time.html">LedgeGrabHoldTime</a></td>
-                    <td class="description">The set time that the character is able to stay idle while grabbing a ledge, before they are forced to exit 'LedgeGrab' state.</td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/smooth-movement.html">SmoothMovement</a></td>
+                    <td class="description">Modify this value to change how fast the character will reach their top speed.</td>
                 </tr>
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/vertical-velocity.html">VerticalVelocity</a></td>
@@ -165,6 +161,14 @@
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/horizontal-velocity.html">HorizontalVelocity</a></td>
                     <td class="description">Current velocity of the character on the X-axis.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/dash-cooldown.html">DashCooldown</a></td>
+                    <td class="description">The set cooldown of the dash mechaninc in seconds.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/ledge-grab-hold-time.html">LedgeGrabHoldTime</a></td>
+                    <td class="description">The set time that the character is able to stay idle while grabbing a ledge, before they are forced to exit 'LedgeGrab' state.</td>
                 </tr>
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/ledge-detected.html">LedgeDetected</a></td>
