--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -595,3 +595,4 @@
         <img class="img-large" src="../IMAGES/_COMBAT-SYSTEM/Projectile-CodeReferences.png" alt="">
     </div>
 </body>
+</html>
