--- a/2D Controller/HTML/frequently-asked-questions.html
+++ b/2D Controller/HTML/frequently-asked-questions.html
@@ -32,6 +32,18 @@
             </li>
         </ul>
         <br>
+        <h2>Q: My animations don't work even though the animator states work as expected. How can I fix this?</h2>
+        <ul class="answer-division">
+            <li class="answer-li">
+                <b>A:</b>
+            </li>
+            <li class="answer-li">
+                Any new animation added to the animator, needs to be rebinded. Please consult the <b>Animation Clips Rebind</b> section of the
+                <a class="redirect-link" href="character-setup.html">Character Setup</a> documentation page.
+                
+            </li>
+        </ul>
+        <br>
         <h2>Q: Why does the character need 2 colliders in order to function properly?</h2>
         <ul class="answer-division">
             <li class="answer-li">
