--- a/2D Controller/HTML/locomotion-controller.html
+++ b/2D Controller/HTML/locomotion-controller.html
@@ -52,6 +52,8 @@
         <p>
             Before we proceed, let's set up our character. If you haven't completed this step yet, please visit the <a class="redirect-link" href="character-setup.html">Character Setup</a>
             section first.
+            <br>
+            To customize the behaviour of the controller configure the setting of the component in the inspector. For more details consult the <a class="redirect-link" href="CLASSES/MANUAL/HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> documentation page.
         </p>
         <br>
         <h2 id="horizontal-movement">Horizontal Movement</h2>
@@ -69,7 +71,7 @@
         <br>
         <h2 id="character-orientation">Character Orientation</h2>
         <p>
-            To make sure our character faces the right direction while moving we also need to utilize the <a class="redirect-link" href="CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html">FlipCharacter</a>
+            To make sure our character face the right direction while moving we also need to utilize the <a class="redirect-link" href="CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html">FlipCharacter</a>
             function. As a parameter we simply need to pass the horizontal input.
         </p>
         <br>
@@ -223,3 +225,4 @@
         <img class="img-large" src="../IMAGES/_LOCOMOTION-SYSTEM/LedgeClimb.png" alt="LedgeClimb">
     </div>
 </body>
+</html>
