--- a/2D Controller/HTML/navigation-bar.html
+++ b/2D Controller/HTML/navigation-bar.html
@@ -14,9 +14,11 @@
                 <li><a href="character-setup.html" target="_top">Character Setup</a></li>
                 <li><a href="locomotion-controller.html" target="_top">Locomotion System</a></li>
                 <li><a href="combat-system.html" target="_top">Combat System</a></li>
+                <li><a href="collision-queries-setup.html" target="_top">Collision Queries Setup</a></li>
                 <li><a href="CLASSES/classes.html" target="_top">Classes</a></li>
                 <li><a href="frequently-asked-questions.html" target="_top">FAQ</a></li>
             </ul>
         </div>
     </header>
 </body>
+</html>
