--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/jump-strength.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/jump-strength.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TopSpeed</title>
+    <title>JumpStrength</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,17 +19,16 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-movement.html">CharacterMovement</a>.TopSpeed</h1>
+        <h1><a class="redirect-link" href="../character-movement.html">CharacterMovement</a>.JumpStrength</h1>
         <h2>Declaration</h2>
-        <p>public float <b>TopSpeed</b> { get; }</p>
+        <p>public float <b>JumpStrength</b> { get; set; }</p>
         <br>
         <h2>Description</h2>
         <p>
-            The character's set movement speed.
+            Modifies the strength of the jump.
             <br> <br>
-            This property represents the character's maximum movement speed within the game world. It defines the upper limit of how fast the character can move when traversing
-            the environment. Adjusting this property through the <a class="redirect-link" href="../PUBLIC-METHODS/set-character-move-speed.html">SetCharacterMoveSpeed</a> function,
-            allows you to fine-tune the character's mobility and responsiveness, providing control over the overall pace and fluidity of movement during gameplay.
+            In the example below, the character's jump will be increased if a power-up is collected. Add a new GameObject to your scene with a collider of your choice
+            set as trigger, and set its tag to <b>JumpPowerUp</b>. Then, attach the provided script to your character.
         </p>
 <pre class="code-block">
 using UnityEngine;
@@ -43,7 +42,14 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
         characterMovement = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-movement.html">CharacterMovement</a>&gt;();
-        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The maximum speed that your character has been set to reach is: " + characterMovement.<b>TopSpeed</b> + " Unity units per second");
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.OnTriggerEnter2D.html">OnTriggerEnter2D</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Collider2D.html">Collider2D</a> collision)
+    {
+        if (collision.<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Component.CompareTag.html">CompareTag</a>("JumpPowerUp"))
+        {
+            characterMovement.<b>JumpStrength</b> *= 2f;
+        }
     }
 }
 </pre>
