--- a/2D Controller/HTML/getting-started.html
+++ b/2D Controller/HTML/getting-started.html
@@ -59,3 +59,4 @@
         <img class="img-large" src="../IMAGES/_GETTING-STARTED/ScriptTemplate.png" alt="CharacterTemplate">
     </div>
 </body>
+</html>
