--- a/2D Controller/HTML/getting-started.html
+++ b/2D Controller/HTML/getting-started.html
@@ -20,7 +20,7 @@
         </div>
         <h2>Locate Starter Files:</h2>
         <p>
-            To get started, navigate to the '<b>Getting Started</b>' folder within your project files which it can be found in <b>Assets -> 2D Character Controller -> _Getting Started</b>.
+            To get started, navigate to the '<b>Getting Started</b>' folder within your project files which it can be found in <b>Assets -> 2D Character Controller -> Content -> _Getting Started</b>.
             <br>
             The resources provided are designed to expedite the setup process and provide a solid foundation for incorporating the asset into your project.
         </p>
