--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/PUBLIC-METHODS/deal-damage-on-contact.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/PUBLIC-METHODS/deal-damage-on-contact.html
@@ -20,14 +20,24 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../combat-system-projectile.html">CombatSystemProjectile</a>.DealDamageOnContact</h1>
         <h2>Declaration</h2>
-        <p>public void <b>DealDamageOnContact</b>();</p>
+        <p>public void <b>DealDamageOnContact</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.html">GameObject</a> objectHit);</p>
+        <br>
+        <div class="table-division">
+            <span class="table-title">Parameters</span>
+            <table>
+                <tr>
+                    <td class="label"><b>objectHit</b></td>
+                    <td class="description">The game object that got hit by the projectile.</td>
+                </tr>
+            </table>
+        </div>
         <br>
         <h2>Description</h2>
         <p>
             Deals damage to the first collider that enters the specified hit box.
             <br><br>
-            Upon executing this function, it will search for a game object that implements the <b>IDamageable</b> interface within the specified hitbox.
-            Upon successfully finding such a game object, damage will be inflicted upon it.
+            Upon executing this function, it will check if the game object passed as a parameter implements the <b>IDamageable</b> interface.
+            Upon successfully validation, damage will be inflicted upon it.
             <br>
             It's worth noting that the functionality of taking damage is already handled by the <a class="redirect-link" href="../../ENTITY-HEALTH/entity-health.html">EntityHealth</a>
             class.
@@ -53,7 +63,8 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.OnCollisionEnter2D.html">OnCollisionEnter2D</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Collision2D.html">Collision2D</a> collision)
     {
-        csProjectile.<b>DealDamageOnContact</b>();
+        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.html">GameObject</a> objectHit = collision.gameObject;
+        csProjectile.<b>DealDamageOnContact</b>(objectHit);
         <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Object.Destroy.html">Destroy</a>(gameObject);
     }
 }
